--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             >
                         </nav>
                     </div>
-                    <a href="#"><img class="header__right_nav__person_icon" src="img/person_icon.svg" alt="person_icon"></a>
+                    <a href="catalog.html"><img class="header__right_nav__person_icon" src="img/person_icon.svg" alt="person_icon"></a>
                     <div class="basket_shower">
                         <div class="basket_shower__counter">5</div>
                         <div>                    
