--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
         <div class="fixation">
             <header class="header">
                 <nav class="header__left_nav">
-                    <a href="#"><img class="logo" src="img/logo.svg" alt="logo"></a></image>
+                    <a href="index.html"><img class="logo" src="img/logo.svg" alt="logo"></a></image>
                     <img class="header__left_nav__searcher" src="img/loup.svg" alt="loup">
                 </nav>
                 <nav class="header__right_nav">
@@ -58,7 +58,7 @@
                             >
                         </nav>
                     </div>
-                    <a href="index.html"><img class="header__right_nav__person_icon" src="img/person_icon.svg" alt="person_icon"></a>
+                    <a href="#"><img class="header__right_nav__person_icon" src="img/person_icon.svg" alt="person_icon"></a>
                     <div class="basket_shower">
                         <div class="basket_shower__counter">5</div>
                         <div>                    
