--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             >
                         </nav>
                     </div>
-                    <a href="catalog.html"><img class="header__right_nav__person_icon" src="img/person_icon.svg" alt="person_icon"></a>
+                    <a href="#"><img class="header__right_nav__person_icon" src="img/person_icon.svg" alt="person_icon"></a>
                     <div class="basket_shower">
                         <div class="basket_shower__counter">5</div>
                         <div>                    
@@ -86,26 +86,26 @@
 
     <section class="main_content">
         <section class="content_photo center">
-            <a href="#">
+            <a href="product_presentation.html">
                 <article class="content_photo__photo1">
                     <p class="content_photo__subtitle">30% OFF</p>
                     <h2 class="content_photo__title">FOR WOMEN</h2>
                 </article>
             </a>
-            <a href="#">
+            <a href="product_presentation.html">
                 <article class="content_photo__photo2">
                     <p class="content_photo__subtitle">HOT DEAL</p>
                     <h2 class="content_photo__title">FOR MEN</h2>
                 </article>
             </a>
-            <a href="#">
+            <a href="product_presentation.html">
                 <article class="content_photo__photo3">
                     <p class="content_photo__subtitle">NEW ARRIVALS</p>
                     <h2 class="content_photo__title">FOR KIDS</h2>
                 </article>
             </a>
             <div class="long_picture">
-                <a href="#">
+                <a href="product_presentation.html">
                     <article class="content_photo__photo4">
                         <p class="content_photo__subtitle">LUXIROUS & TRENDY</p>
                         <h2 class="content_photo__title"> ACCESORIES</h2>
@@ -132,11 +132,13 @@
                         </button>
                     </div>
                 </div>
-                <article class="item_text">
-                    <h3 class="item_text__title">ELLERY X M'O CAPSULE</h3>
-                    <p class="item_text__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                    <h4 class="item_text__price">$52.00</h4>
-                </article>
+                <a href="catalog.html">
+                    <article class="item_text">
+                        <h3 class="item_text__title">ELLERY X M'O CAPSULE</h3>
+                        <p class="item_text__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                        <h4 class="item_text__price">$52.00</h4>
+                    </article>
+                </a>
             </figure>
             <figure class="content_item2 content_bgc">
                 <div class="pseudo">
@@ -150,11 +152,13 @@
                         </button>
                     </div>
                 </div>
-                <article class="item_text">
-                    <h3 class="item_text__title">ELLERY X M'O CAPSULE</h3>
-                    <p class="item_text__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                    <h4 class="item_text__price">$52.00</h4>
-                </article>
+                <a href="catalog.html">
+                    <article class="item_text">
+                        <h3 class="item_text__title">ELLERY X M'O CAPSULE</h3>
+                        <p class="item_text__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                        <h4 class="item_text__price">$52.00</h4>
+                    </article>
+                </a>
             </figure>
             <figure class="content_item3 content_bgc">
                 <div class="pseudo">
@@ -168,11 +172,13 @@
                         </button>
                     </div>
                 </div>
-                <article class="item_text">
-                    <h3 class="item_text__title">ELLERY X M'O CAPSULE</h3>
-                    <p class="item_text__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                    <h4 class="item_text__price">$52.00</h4>
-                </article>
+                <a href="catalog.html">
+                    <article class="item_text">
+                        <h3 class="item_text__title">ELLERY X M'O CAPSULE</h3>
+                        <p class="item_text__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                        <h4 class="item_text__price">$52.00</h4>
+                    </article>
+                </a>
             </figure>
             <figure class="content_item4 content_bgc">
                 <div class="pseudo">
@@ -186,11 +192,13 @@
                         </button>
                     </div>
                 </div>
-                <article class="item_text">
-                    <h3 class="item_text__title">ELLERY X M'O CAPSULE</h3>
-                    <p class="item_text__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                    <h4 class="item_text__price">$52.00</h4>
-                </article>
+                <a href="catalog.html">
+                    <article class="item_text">
+                        <h3 class="item_text__title">ELLERY X M'O CAPSULE</h3>
+                        <p class="item_text__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                        <h4 class="item_text__price">$52.00</h4>
+                    </article>
+                </a>
             </figure>
             <figure class="content_item5 content_bgc">
                 <div class="pseudo">
@@ -204,11 +212,13 @@
                         </button>
                     </div>
                 </div>
-                <article class="item_text">
-                    <h3 class="item_text__title">ELLERY X M'O CAPSULE</h3>
-                    <p class="item_text__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                    <h4 class="item_text__price">$52.00</h4>
-                </article>
+                <a href="catalog.html">
+                    <article class="item_text">
+                        <h3 class="item_text__title">ELLERY X M'O CAPSULE</h3>
+                        <p class="item_text__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                        <h4 class="item_text__price">$52.00</h4>
+                    </article>
+                </a>
             </figure>
             <figure class="content_item6 content_bgc">
                 <div class="pseudo">
@@ -222,11 +232,13 @@
                         </button>
                     </div>
                 </div>
-                <article class="item_text">
-                    <h3 class="item_text__title">ELLERY X M'O CAPSULE</h3>
-                    <p class="item_text__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                    <h4 class="item_text__price">$52.00</h4>
-                </article>
+                <a href="catalog.html">
+                    <article class="item_text">
+                        <h3 class="item_text__title">ELLERY X M'O CAPSULE</h3>
+                        <p class="item_text__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                        <h4 class="item_text__price">$52.00</h4>
+                    </article>
+                </a>
             </figure>
         </section>
         <section class="explore">
