--- a/product_presentation.html
+++ b/product_presentation.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700;900&family=Open+Sans:wght@600;700&family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/product_presentation.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="all_content">
@@ -25,6 +25,7 @@
                         <label class="special_img_link" for="burger">
                             <img class="header__right_nav__special_img" src="img/burger.svg" alt="burger">
                         </label>
+
                         <div class="for_menu">
                             <nav class="header_menu">
                                 <h2 class="header_menu__title">menu</h2>
@@ -53,13 +54,11 @@
                                 <a class="header_menu__section_subtitle" href="#">Polos</a>
                                 <a class="header_menu__section_subtitle" href="#">T-Shirts</a>
                                 <a class="header_menu__section_subtitle" href="#">Shirts</a>
-                                <a
-                                        class="header_menu__section_subtitle header_menu__section_subtitle_last"
-                                        href="#"
-                                >Bags</a
-                                >
+                                <a                                class="header_menu__section_subtitle header_menu__section_subtitle_last"
+                                href="#">Bags</a>
                             </nav>
                         </div>
+
                         <a href="#"><img class="header__right_nav__person_icon" src="img/person_icon.svg" alt="person_icon"></a>
                         <div class="basket_shower">
                             <div class="basket_shower__counter">5</div>
