--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework 6</title>
+    <title>Index</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +28,7 @@
                         <div class="for_menu">
                             <nav class="header_menu">
                                 <h2 class="header_menu__title">menu</h2>
-                                <a class="header_menu__section" href="#">MAN</a>
+                                <a class="header_menu__section" href="product_presentation.html">MAN</a>
                                 <a class="header_menu__section_subtitle" href="#">Accessories</a>
                                 <a class="header_menu__section_subtitle" href="#">Bags</a>
                                 <a class="header_menu__section_subtitle" href="#">Denim</a>
@@ -37,7 +37,7 @@
                                         href="#"
                                 >T-Shirts</a
                                 >
-                                <a class="header_menu__section" href="#">WOMAN</a>
+                                <a class="header_menu__section" href="product_presentation.html">WOMAN</a>
                                 <a class="header_menu__section_subtitle" href="#">Accessories</a>
                                 <a class="header_menu__section_subtitle" href="#">Jackets & Coats</a>
                                 <a class="header_menu__section_subtitle" href="#">Polos</a>
@@ -47,7 +47,7 @@
                                         href="#"
                                 >Shirts</a
                                 >
-                                <a class="header_menu__section" href="#">KIDS</a>
+                                <a class="header_menu__section" href="product_presentation.html">KIDS</a>
                                 <a class="header_menu__section_subtitle" href="#">Accessories</a>
                                 <a class="header_menu__section_subtitle" href="#">Jackets & Coats</a>
                                 <a class="header_menu__section_subtitle" href="#">Polos</a>
@@ -64,7 +64,7 @@
                         <div class="basket_shower">
                             <div class="basket_shower__counter">5</div>
                             <div>                    
-                                <a class="basket_shower__icon" href="#"><img src="img/basket_nav.svg" alt="basket"></a>
+                                <a class="basket_shower__icon" href="basket.html"><img src="img/basket_nav.svg" alt="basket"></a>
                              </div>
                         </div>
                                                               
