--- a/product_presentation.html
+++ b/product_presentation.html
@@ -108,15 +108,34 @@
                         <details class="filter__item">
                             <summary class="filter__bag_head"><span>BRAND</span></summary>
                             <div class="filter__link_bag">
-                                <a href="#" class="filter__link">some shit</a>
+                                <a href="#" class="filter__link">Accessories</a>
+                                <a href="#" class="filter__link">Bags</a>
+                                <a href="#" class="filter__link">Denim</a>
+                                <a href="#" class="filter__link">Hoodies & Sweatshirts</a>
+                                <a href="#" class="filter__link">Jackets & Coats</a>
+                                <a href="#" class="filter__link">Polos</a>
+                                <a href="#" class="filter__link">Shirts</a>
+                                <a href="#" class="filter__link">Shoes</a>
+                                <a href="#" class="filter__link">Sweaters & Knits</a>
+                                <a href="#" class="filter__link">T-Shirts</a>
+                                <a href="#" class="filter__link">Tanks</a>
                             </div>
                         </details>
                         <details class="filter__item">
                             <summary class="filter__bag_head"><span>DESIGNER</span></summary>
                             <div class="filter__link_bag">
-                                <a href="#" class="filter__link">some shit</a>
+                                <a href="#" class="filter__link">Accessories</a>
+                                <a href="#" class="filter__link">Bags</a>
+                                <a href="#" class="filter__link">Denim</a>
+                                <a href="#" class="filter__link">Hoodies & Sweatshirts</a>
+                                <a href="#" class="filter__link">Jackets & Coats</a>
+                                <a href="#" class="filter__link">Polos</a>
+                                <a href="#" class="filter__link">Shirts</a>
+                                <a href="#" class="filter__link">Shoes</a>
+                                <a href="#" class="filter__link">Sweaters & Knits</a>
+                                <a href="#" class="filter__link">T-Shirts</a>
+                                <a href="#" class="filter__link">Tanks</a>
                             </div>
-
                         </details>
                     </div>
                 </details>
