--- a/basket.html
+++ b/basket.html
@@ -57,8 +57,8 @@
                             </nav>
                         </div>
 
-                        <a href="#"><img class="header__right_nav__person_icon" src="img/person_icon.svg"
-                                alt="person_icon"></a>
+                        <a href="registration.html"><img class="header__right_nav__person_icon"
+                                src="img/person_icon.svg" alt="person_icon"></a>
                         <div class="basket_shower">
                             <div class="basket_shower__counter">5</div>
                             <div>
